test successful login and un successful login